<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchemin_vierge_vert"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharaCreationProfil" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tableProfilPrincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="9"
                        android:gravity="center"
                        android:text="@string/profil_principal" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/cc" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/ct" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/f" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/e" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/ag" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/intelligence" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/fm" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/soc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/base" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseCC" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseCT" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseF" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseE" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseAg" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseInt" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseFM" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseSoc" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableProfilSecondaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="9"
                        android:gravity="center"
                        android:text="@string/profil_secondaire" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/a" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/b" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/bf" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/be" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/m" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/mag" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/pf" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/pd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <fr.eurecom.warhammerontheroad.WotrTextView android:text="@string/base" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseA" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseB" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseBF" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseBE" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseM" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBaseMag" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBasePF" />

                    <fr.eurecom.warhammerontheroad.WotrTextView android:id="@+id/creationBasePD" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <fr.eurecom.warhammerontheroad.WotrTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrier" />

        <Spinner
            android:id="@+id/spinChooseCarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <fr.eurecom.warhammerontheroad.WotrButton
        android:id="@+id/btnTermCreaChara"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="terminate"
        android:text="@string/terminate" />

</LinearLayout>