<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/parchemin_vierge_vert" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/warhammertitle"/>
        
        <fr.eurecom.warhammerontheroad.application.WotrButton
                android:id="@+id/btnCreateGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createGame"
                android:onClick="createGame" />
        
        <fr.eurecom.warhammerontheroad.application.WotrButton
                android:id="@+id/btnJoinGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinGame"
                android:onClick="joinGame" />
        
        <fr.eurecom.warhammerontheroad.application.WotrButton
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:onClick="quit" />
        
        
    </LinearLayout>
    

</ScrollView>
