<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/parchemin_vierge_vert"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <fr.eurecom.warhammerontheroad.WotrTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_gm" />

            <fr.eurecom.warhammerontheroad.WotrTextView
                android:id="@+id/new_game_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <fr.eurecom.warhammerontheroad.WotrTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/give_number" />
        </LinearLayout>
    </ScrollView>

    <fr.eurecom.warhammerontheroad.WotrButton
        android:id="@+id/btnAccessGMMenu"
        style="@style/ButtonSize"
        android:layout_weight="1"
        android:onClick="accessGMMenu"
        android:text="@string/access_gm_menu" />

    <fr.eurecom.warhammerontheroad.WotrButton
        android:id="@+id/btnCancelGameCreation"
        style="@style/ButtonSize"
        android:layout_weight="1"
        android:onClick="cancelGameCreation"
        android:text="@string/cancel_game_creation" />

</LinearLayout>